Fixed broken chat messages with Chat Colors pack